tests/good/modules/main.sm
(module Main imports (StdLib Foo))

(vars ())

(functions (
  (function main ()
      (foo)
  )
))
