tests/bad/redefine_fun/main.sm
(module Main imports (StdLib Foo))

(vars ())

(functions (
  (function foo () 1)

  (function main ()
    0
  )
))
